--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
-    <script defer="defer" src="static/js/main.473bf345.js"></script>
-    <link href="static/css/main.541afa74.css" rel="stylesheet" />
+    <title>Portfolio</title>
+    <script defer="defer" src="static/js/main.3401e3c0.js"></script>
+    <link href="static/css/main.09946ad3.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
